<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".productdetails.ProductDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/product_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/product_details"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name_of_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/name_of_product"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_details" />

            <EditText
                android:id="@+id/price_of_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/price_of_product"
                android:inputType="number"
                android:maxLength="12"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="@+id/name_of_product"
                app:layout_constraintStart_toStartOf="@+id/name_of_product"
                app:layout_constraintTop_toBottomOf="@+id/name_of_product" />

            <TextView
                android:id="@+id/qty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/qty"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_of_product" />

            <Button
                android:id="@+id/increase_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/plus"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toEndOf="@+id/qty_text"
                app:layout_constraintTop_toBottomOf="@+id/price_of_product" />

            <EditText
                android:id="@+id/qty_value"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/default_qty"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/supplier_information"
                app:layout_constraintEnd_toStartOf="@+id/decrease_btn"
                app:layout_constraintStart_toEndOf="@+id/increase_btn"
                app:layout_constraintTop_toBottomOf="@+id/price_of_product" />

            <Button
                android:id="@+id/decrease_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/poppins"
                android:text="@string/sub"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/qty_value"
                app:layout_constraintTop_toBottomOf="@+id/price_of_product" />

            <EditText
                android:id="@+id/supplier_information"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/supplier"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/increase_btn" />

            <Button
                android:id="@+id/order_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/poppins"
                android:padding="16dp"
                android:text="@string/order"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/supplier_information" />

            <Button
                android:id="@+id/upload_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:padding="16dp"
                android:text="@string/upload"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@+id/order_product"
                app:layout_constraintStart_toStartOf="@+id/order_product"
                app:layout_constraintTop_toBottomOf="@+id/order_product" />

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upload_image"
                tools:src="@tools:sample/avatars" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>